show pin location

--- a/nostra-api_sample-tutorial/show_pin_location.html
+++ b/nostra-api_sample-tutorial/show_pin_location.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Add Graphic to a Map Sample</title>
+    <title>Show Pin Location</title>
     <style type="text/css">
         body {
             overflow: hidden;
