--- a/Nostra-map/show_pin_location.html
+++ b/Nostra-map/show_pin_location.html
@@ -105,10 +105,18 @@
                 .then(data => {
                     console.log('Data:', data);
                     // Process the API data and add markers to the map
-                    data.forEach(item => {
+                    for (var i in data) {
+                        item = data[i]
+                        console.log(item)
                         content = ""
+                        if (item.toilet_name) {
+                            content = "<div font-size:20px\"><strong>"
+                            content = content + item.toilet_name + "</strong></div>"
+                        }
+
                         if (item.toilet_address) {
-                            content = content  + item.toilet_address
+                            content = content + "<hr>"
+                            content = content + item.toilet_address
                         }
                         if (item.toilet_district) {
                             content = content + "<br>" + item.toilet_district
@@ -121,17 +129,18 @@
                         }
                         if (item.avg_rating){
                             rating = Math.round(item.avg_rating);
-                            <!-- console.log(rating); -->
+                            console.log(rating);
                             star_rating = ""
                             for (let i = 0; i < rating; i++) {
-                                star_rating = star_rating + "<img src=\"https://developer.nostramap.com/developer/asset/image/icon/ic-customCallout-rating.png\">"
+                                star_rating = star_rating + "<img src=\"https://developer.nostramap.com/developer/asset/image/icon/ic-customCallout-rating.png\"> "
                             }
-                            <!-- console.log(star_rating); -->
-                            <!-- content = content + "<br>" + "<div>" + item.star_rating + "</div>" -->
-                            content = content + "<br>" + item.avg_rating
+                             console.log(star_rating);
+                            content = content + "<br>" + star_rating
+                            <!-- content = content + "<br>" + item.avg_rating -->
                         }
+                        console.log(content)
                         addMarker(item.location_latitude, item.location_longitude, item.toilet_name, content);
-                    });
+                    };
                 })
                 .catch(error => {
                     console.error('Error loading API data:', error);
@@ -139,8 +148,22 @@
         }
     
         function addMarker(latitude, longitude, title, description) {
-            var nostraCallout = new nostra.maps.Callout({ title: title, content: description });
-            var pointMarker = new nostra.maps.symbols.Marker({ url: '', width: 60, height: 60, callout: nostraCallout });
+            var nostraCallout = new nostra.maps.CustomCallout({ 
+                content: description, 
+                width: 256,
+                height: 128,
+                color: "#FFFFFF",
+                fontSize: 20,
+                fontColor: "#000000",
+                fontFamily: "Sarabun New",
+                showShadow: true  
+            });
+            var nostraLabel = new nostra.maps.symbols.Label({
+                text: title,
+                size: "10",
+                position: "top"
+            });
+            var pointMarker = new nostra.maps.symbols.Marker({ url: '', width: 60, height: 60, customCallout: nostraCallout, label: nostraLabel});
             pointLayer.addMarker(latitude, longitude, pointMarker);
         }
     </script>
