--- a/frontend/show_pin_location.html
+++ b/frontend/show_pin_location.html
@@ -109,7 +109,7 @@
                   console.log("HTML file trigger the update-map");
               
                   // Update the map's location based on latitude and longitude
-                  map.panTo(latitude, longitude);
+                  map.centerAndZoom(latitude, longitude, 18);
                 }
               };
           };
